fix: z-index wrapper

--- a/src/components/modal/styles.module.scss
+++ b/src/components/modal/styles.module.scss
@@ -8,6 +8,7 @@
     top: 0;
     left: 0;
     background-color: rgba(197, 194, 194, 0.151);
+    z-index: 3;
 }
 
 .form {
@@ -15,4 +16,5 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 5;
 }
